<resources>
    <string name="app_name">Food Funding</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account_register">Don\'t have an account? Register</string>
    <string name="add_donation">Add Donation</string>
    <string name="app_logo">App Logo</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="nourished_with_joy_and_grace">Nourished with Joy and Grace</string>
</resources>